Fixes from latest playtesting