@@ -56,7 +56,7 @@ public class ShotgunListener implements Listener {
 
     if (damageMap.keySet().size() == 1
         && affectedEntities.size() == PELLETS_AMOUNT
-        && !isInTeam(player, affectedEntities.get(0))) {
+        && !isInTeam(player, affectedEntities.getFirst())) {
       damageMap.keySet().stream().findFirst().ifPresent(e -> {
         e.addPotionEffect(new PotionEffect(PotionEffectType.SLOW, 60, 2, false, false, false));
         e.setFireTicks(20 * 3);
@@ -105,7 +105,7 @@ public class ShotgunListener implements Listener {
         if (Math.random() < .3) {
           surface.getWorld().spawnParticle(Particle.FLAME, surface, 1, 0, 0, 0, 0);
         }
-        surface.getWorld().spawnParticle(Particle.BLOCK_DUST, surface, 5, .1, .1, .1,
+        surface.getWorld().spawnParticle(Particle.BLOCK_CRACK, surface, 5, .1, .1, .1,
             at.getBlock().getBlockData());
         surface.getWorld().spawnParticle(Particle.SMOKE_NORMAL, surface, 3, .01, .01, .01, .01);
         break;
@@ -115,10 +115,11 @@ public class ShotgunListener implements Listener {
           .stream()
           .filter(LivingEntity.class::isInstance)
           .filter(entity -> entity != player)
+          .filter(entity -> !IgnoreEntities.shouldIgnoreEntity(entity))
           .map(LivingEntity.class::cast)
           .findFirst();
       if (first.isPresent()) {
-        at.getWorld().spawnParticle(Particle.BLOCK_DUST, at, 10, .2, .2, .2,
+        at.getWorld().spawnParticle(Particle.BLOCK_CRACK, at, 10, .2, .2, .2,
             Material.REDSTONE_BLOCK.createBlockData());
         return first;
       }
